fixed extra white space on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,10 @@ html {
   height: 100%;
 }
 
+.fix-for-extra-right-space{
+  overflow-x: hidden;
+}
+
 hr {
   // border-top: 1px solid #ffE8D8;
 }
